# PKMN.DB

./: .gitignore  PKMNDB-QUICKEVENTS.ipynb  Procfile  README.md  SQL_DEMO.ipynb  V2_PKMN.db.py  V2_PKMN_schema.gv  api-test.ipynb  backlog.txt  check_tables.py  init_db.py  main.py  playwright.config.py  pyproject.toml  render.yaml  requirements.txt  roadmap.txt  runserver.py  type_data.json  update_supabase.py  update_supabase.sql
.github/workflows/: ci-cd.yml  playwright.yml  test.yml
.streamlit/: config.toml
app/: cli.py  streamlit_app.py
app/api/: main.py
app/api/ingestion/: client.py
app/api/routes/: __init__.py  game.py  home.py  pokemon.py
app/app/db/: PKMNGO.db
app/db/: PKMN.db  PKMNGOdb_local_build.py  PKMNdb_local_build.py  __init__.py  backup.py  cli.py  create_relations.py  database.py  engine.py  fix_pokedex_numbers.py  local_build.py  merge.py  merge_databases.py  setup.py  supabase_migration.py  test.db
app/models/: __init__.py  ability.py  evolution.py  game.py  machine.py  move.py  pokedex_number.py  pokemon.py  pokemon_ability.py  pokemon_detail.py  pokemon_learnset.py  pokemon_sprite.py  pokemon_stat.py  type.py  type_effectiveness.py
data/: pokemon go type effectiveness chart.xlsx
dbt/: profiles.yml
dbt/models/: sources.yml
json_requests/: ability.json  evolution-chain.json  pokemon-species.json  type.json
mlruns/0/: meta.yaml
old_sql/: a_Pokemons.sql  b_Types.sql  c_Capacites.sql  d_GO_Capacites.sql  e_Efficacite_des_types.sql  e_Talents.sql  f_Evolutions.sql  g_Apprentissages.sql  h_GO_Apprentissages.sql
scripts/: db_setup.py
sql/models/: abilities.sql  evolutions.sql  games.sql  machines.sql  moves.sql  pokedex_numbers.sql  pokemon_details.sql  pokemons.sql  pokemons_abilities.sql  pokemons_learnsets.sql  pokemons_sprites.sql  pokemons_stats.sql  pokemons_types.sql  types.sql  types_effectiveness.sql
tests/: database_test.ipynb  test.db  test_app.py  test_streamlit_app.py
tests/e2e/: test_home.py  test_streamlit_integration.py
tests/ml/: test_data_pipeline.py  test_mlflow_tracking.py
(+725 files in other folders)
