[project]
name = "pkmn-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.9.4",
    "dbt-sqlite>=1.9.1",
    "ipykernel>=6.29.5",
    "polars>=1.29.0",
    "scrapy>=2.12.0",
    "ujson>=5.10.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]
