[project]
name = "pkmn-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "polars>=1.29.0",
    "scrapy>=2.12.0",
    "sqlmodel>=0.0.24",
    "supabase>=2.15.1",
    "ujson>=5.10.0",
    "typer>=0.9.0",
    "roman>=5.0",
    "scrapy-splash>=0.11.1",
    "python-dotenv>=1.1.0",
    "matplotlib>=3.10.3",
    "uvicorn>=0.34.2",
    "litestar>=2.16.0",
    "streamlit>=1.45.1",
    "keras>=3.10.0",
    "scikit-learn>=1.6.1",
    "joblib>=1.5.0",
    "mlflow>=2.22.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "icecream>=2.1.4",
    "loguru>=0.7.3",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
pkmn-db = "app.db.cli:main"
